# url-shortener

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/db/: database.py  models.py
app/repository/: url_repository.py
app/schemas/: url.py
app/services/: url_service.py
